--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Emir İnan"
   pronouns         : # example: "she/her"  
-  bio              : "Makine Mühendisi | Mekanik Tasarım | AR-GE | Yapısal Analiz''
+  bio              : "Makine Mühendisi | Mekanik Tasarım | AR-GE | Yapısal Analiz"
   location         : "Türkiye"
   employer         : "Red Brick University"
   uri              : "https://Emir3d.github.io/muhendislik-cv"
