--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Emir İnan"
   pronouns         : # example: "she/her"  
-  bio              : "Makine Mühendisi | Mekanik Tasarım | AR-GE | Yapısal Analiz"
+  bio              : "M.Sc. Student in Mechanical Eng.<br>Simulation & Design Engineer"
   location         : "Türkiye"
   employer         : "Atatürk Üniversitesi"
   uri              : "https://Emir3d.github.io/muhendislik-cv"
