--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
  # avatar           : "profile.png"
   name             : "Emir İnan"
   pronouns         : # example: "she/her"  
-  bio              : "Mechanical Eng.<br>Simulation & Design Engineer"
+  bio              : "Mechanical Engineering (M.Sc.)<br>Simulation & Design"
   employer         : "Atatürk Üniversitesi"
   location         : "Türkiye"
  # uri              : "https://Emir3d.github.io/muhendislik-cv"
