--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   employer         : "Atatürk Üniversitesi"
   location         : "Türkiye"
  # uri              : "https://Emir3d.github.io/muhendislik-cv"
-  email            : "emir4d25@gmail.com"
+  email            : "emirhan555inan@gmail.com"
 
   # Academic websites
   academia         : # URL
