--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Portfolyo"
     url: /portfolio/
 
-  - title: "Sertifikalar"
+  - title: "Certificates"
     url: /certificates/
   
   - title: "Engineering Notes"
