--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : "UCPEJ9eKb1WITfVTLHQAIVGW"
+  youtube          : "https://www.youtube.com/channel/UCPEJ9eKb1WlTfVTLhQAIVGw"
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
