--- a/_config.yml
+++ b/_config.yml
@@ -154,9 +154,10 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "false" # false (default), "google", "google-universal", "google-analytics-4", "custom"
+  provider               : "google-gtag"
   google:
-    tracking_id          :
+    tracking_id          : "G-PP9N7JYBCV"
+    anonymize_ip         : true
 
 
 # Reading Files
